[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/person.png" type="Texture" id=1]
[ext_resource path="res://scenes/slots/character_slot.gd" type="Script" id=2]
[ext_resource path="res://scenes/cards/character_card.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/card.png" type="Texture" id=5]
[ext_resource path="res://scenes/buttonfont.tres" type="DynamicFont" id=9]
[ext_resource path="res://images/bar-under.png" type="Texture" id=10]
[ext_resource path="res://images/cargo-bg.png" type="Texture" id=11]
[ext_resource path="res://images/bar-progress.png" type="Texture" id=12]

[node name="CharacterSlot" type="TextureRect"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Bg" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )

[node name="DeckType" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 7
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 124.0
alignment = 2

[node name="CharacterCard" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 85.0
margin_bottom = 98.0
size_flags_vertical = 3

[node name="CharacterDamage" type="TextureProgress" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 102.0
margin_right = 85.0
margin_bottom = 120.0
max_value = 5.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 12 )
fill_mode = 1

[node name="CharacterDamageLabel" type="Label" parent="MarginContainer/VBoxContainer/CharacterDamage"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.5
margin_top = -6.5
margin_right = 9.5
margin_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 9 )
text = "5/5"
